using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Source.Model
{
    public enum BuildType : int
    {
        Empty,
        Housing,
        Office,
        Transport
    }
}
