using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using Ctrl = Source.Controller;

public class Game : MonoBehaviour
{
    // Start is called before the first frame update
    void Start()
    {
        
    }

    /*
        *schéma : fonction/proc : typeretour
        *Paramètre : 
        *Keskecé :
        *Varibales locales :
    */
}
